# schelling

./: .gitignore  README.md  Schelling.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  s.py  setup.cfg
.ipynb_checkpoints/: Schelling-checkpoint.ipynb
examples/: run_simulation.py
src/schelling/: model.py  visualizer.py
src/tests/: test_model.py  test_run_simulation.py  test_visualizer.py
