[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schelling"
version = "0.1.0"
description = "Schelling's segregation model implementation"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]

[tool.setuptools]
package-dir = {"" = "src", "examples" = "examples"}
packages = ["schelling", "examples"] 